color is set by changing the className and color codes are written in the css file instead of in the js file

--- a/FloggitWhiteboardWebClient/src/css/master.css
+++ b/FloggitWhiteboardWebClient/src/css/master.css
@@ -135,3 +135,19 @@ legend {
     font-size: large;
     color: #ffffff;
 }
+
+.blue {
+    background-color: dodgerblue;
+}
+
+.green {
+    background-color: mediumseagreen;
+}
+
+.pink {
+    background-color: pink;
+}
+
+.orange {
+    background-color: lightsalmon;
+}
